highlighting winning squares

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,10 @@ ol, ul {
   background: #ddd;
 }
 
+.square.highlight {
+  background-color: #ffffcc;
+}
+
 .game {
   display: flex;
   flex-direction: row;
